# mne-beaforming-with-MAT-pipeline

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  setup.py
configs/: example_config.yaml
docs/: filtAndSave_mapping.md
scripts/: run_subject.py
src/pipeline/: __init__.py  beamformer.py  conditions.py  config.py  filtering.py  io.py  orchestrator.py
src/pipeline/stats/: __init__.py  base.py  runner.py  tests.py
tests/: test_config_and_stats.py
